// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`module-with-late-docblock.js 1`] = `
function foo(bar) { 
  return bar + 3 + 4;
}

/**
 * Some notes that should not be appended to
 */ 
const fruit = 'tomatoes';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/** @format */

function foo(bar) {
  return bar + 3 + 4;
}

/**
 * Some notes that should not be appended to
 */

const fruit = "tomatoes";

`;

exports[`module-with-multiple-same-pragma.js 1`] = `
/**
 * @x 1
 * @x 2
 */
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/**
 * @format
 * @x 1
 * @x 2
 */

`;

exports[`module-with-pragma.js 1`] = `
/**
 * Here lie words above pragmas
 * 
 * @flow
 * @format
 */

function foo(bar) {
  return bar + 3 + 4;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/**
 * Here lie words above pragmas
 *
 * @flow
 * @format
 */

function foo(bar) {
  return bar + 3 + 4;
}

`;

exports[`module-without-docblock.js 1`] = `
function foo(bar) { 
  return bar + 3 + 4;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/** @format */

function foo(bar) {
  return bar + 3 + 4;
}

`;

exports[`module-without-pragma.js 1`] = `
/**
 * @flow
 * 
 * Words below the wrong pragma
 */

function foo(bar) { 
  return bar + 3 + 4;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/**
 * Words below the wrong pragma
 *
 * @format
 * @flow
 */

function foo(bar) {
  return bar + 3 + 4;
}

`;

exports[`trailing-spaces-first-line.js 1`] = `
/**	
 * Copyright (c) 2015-present, Facebook, Inc.	
 * All rights reserved.	
 *	
 * This source code is licensed under the license found in the LICENSE file in	
 * the root directory of this source tree.	
 */	
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/**
 * Copyright (c) 2015-present, Facebook, Inc.
 * All rights reserved.
 *
 * This source code is licensed under the license found in the LICENSE file in
 * the root directory of this source tree.
 *
 * @format
 */

`;
